add cf7 styling

--- a/stoves-and-fireplaces/sass/partials/_colors.scss
+++ b/stoves-and-fireplaces/sass/partials/_colors.scss
@@ -7,8 +7,10 @@ $reach-orange: #ffa73d;
 // Background colors:
 
 // special colors
-$cf7-success-color: #000;
-$cf7-success-background: #57f14e;
+$cf7-success-color: #F4E19A;
+$cf7-success-background: #598E46;
+$cf7-submit-color: #fff;
+
 $top-cta-bkg: #4e72b0;
 $top-cta-font: #faf3e6;
 $bottom-cta-bkg: rgba(78,114,176,0.22);
