--- a/stoves-and-fireplaces/sass/partials/_cf7.scss
+++ b/stoves-and-fireplaces/sass/partials/_cf7.scss
@@ -2,6 +2,7 @@
 .wpcf7-form {
    textarea {
       height: 200px;
+      background-color: white;
     }
     input[type="text"],
     input[type="password"],
@@ -34,11 +35,12 @@
       border: none;
       border-radius: 3px;
       text-transform: uppercase;
-      font-weight: bold;
+      color: $cf7-submit-color;
+      //font-weight: bold;
     }
     label {
-      font-weight: bold;
-      font-size: 1.1em;
+      //font-weight: bold;
+      //font-size: 1.1em;
     }
     p {
       margin-bottom: 5px;
