--- a/stoves-and-fireplaces/sass/style.scss
+++ b/stoves-and-fireplaces/sass/style.scss
@@ -11,6 +11,7 @@ Version: 1.2
 @import "partials/typography";
 @import "partials/oshine";
 @import "partials/cf7";
+@import "partials/woo";
 
 
 /*** slidebar in oshine slidebar is above main content *** */
