working on products

--- a/stoves-and-fireplaces/sass/partials/_colors.scss
+++ b/stoves-and-fireplaces/sass/partials/_colors.scss
@@ -14,4 +14,6 @@ $cf7-submit-color: #fff;
 $top-cta-bkg: #4e72b0;
 $top-cta-font: #faf3e6;
 $bottom-cta-bkg: rgba(78,114,176,0.22);
+
+$msf-green: #598e46;
 /* ----------- end Colors ----------- */
