styling service category
1st add categories to the body classes
2nd styling 'em.

--- a/stoves-and-fireplaces/sass/partials/_woo.scss
+++ b/stoves-and-fireplaces/sass/partials/_woo.scss
@@ -93,3 +93,15 @@
     } // docs wrapper
   }
 } // single product
+// single product in category of product_cat_services
+.woocommerce.single-product.product_cat_services {
+    #content #content-wrap .product {
+      .images {
+        width: 30%;
+        max-width: 300px;
+      }
+      div.summary {
+        width: 65%;
+      }
+    }
+}
