style the subtitle
used for hot tubs archive

--- a/stoves-and-fireplaces/sass/partials/_woo.scss
+++ b/stoves-and-fireplaces/sass/partials/_woo.scss
@@ -126,4 +126,15 @@
         }
       }
     }
+    #content {
+      .products-wrap {
+        .products {
+          .product {
+            .product-subtitle {
+                margin-top: -10px;
+            }
+          }
+        }
+      }
+    } // #content
 }
