some woo styling
- remove the number in archive
- make services title bigger in archive

--- a/stoves-and-fireplaces/sass/partials/_woo.scss
+++ b/stoves-and-fireplaces/sass/partials/_woo.scss
@@ -127,6 +127,10 @@
       }
     }
     #content {
+      .woocommerce-result-count {
+        display: none;
+      }
+
       .products-wrap {
         .products {
           .product {
@@ -137,4 +141,15 @@
         }
       }
     } // #content
+}
+.woocommerce.archive.term-services { // body for the SERVICES product archive
+  .products-wrap {
+    .products {
+      .product {
+        .woocommerce-loop-product__title {
+          font-size: 2em;
+        }
+      }
+    }
+  }
 }
