remove the wrap on the reach CTA above content
and hide one of the logos on woo category page???

--- a/stoves-and-fireplaces/sass/partials/_woo.scss
+++ b/stoves-and-fireplaces/sass/partials/_woo.scss
@@ -1,5 +1,12 @@
 /* styling for woocommerce */
-
+// category archive
+.archive.woocommerce { // for some reason, when reach CTA above content is active, two logos show, hide one of them.
+  .logo {
+    .transparent-logo.light-scheme-logo {
+      display: none;
+    }
+  }
+}
 // single product
 .woocommerce.single-product .product {  // body class
 
